--- a/MyWinApp/MyWinApp/MyWinApp.csproj
+++ b/MyWinApp/MyWinApp/MyWinApp.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataTypeForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DataTypeForm.Designer.cs">
+      <DependentUpon>DataTypeForm.cs</DependentUpon>
+    </Compile>
     <Compile Include="HomeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -54,6 +60,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="DataTypeForm.resx">
+      <DependentUpon>DataTypeForm.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="HomeForm.resx">
       <DependentUpon>HomeForm.cs</DependentUpon>
     </EmbeddedResource>
