--- a/MyWinApp/MyWinApp/MyWinApp.csproj
+++ b/MyWinApp/MyWinApp/MyWinApp.csproj
@@ -59,6 +59,10 @@
     <Compile Include="DataTypeForm.Designer.cs">
       <DependentUpon>DataTypeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="FeaturesForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="FeaturesForm.Designer.cs" />
     <Compile Include="HomeForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -79,6 +83,7 @@
     <EmbeddedResource Include="DataTypeForm.resx">
       <DependentUpon>DataTypeForm.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="FeaturesForm.resx" />
     <EmbeddedResource Include="HomeForm.resx">
       <DependentUpon>HomeForm.cs</DependentUpon>
     </EmbeddedResource>
