--- a/MyWinApp/MyWinApp/MyWinApp.csproj
+++ b/MyWinApp/MyWinApp/MyWinApp.csproj
@@ -59,6 +59,12 @@
     <Compile Include="DataTypeForm.Designer.cs">
       <DependentUpon>DataTypeForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="DepartmentUi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="DepartmentUi.Designer.cs">
+      <DependentUpon>DepartmentUi.cs</DependentUpon>
+    </Compile>
     <Compile Include="FeaturesForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -88,6 +94,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="DataTypeForm.resx">
       <DependentUpon>DataTypeForm.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="DepartmentUi.resx">
+      <DependentUpon>DepartmentUi.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FeaturesForm.resx" />
     <EmbeddedResource Include="HomeForm.resx">
