--- a/MyWinApp/MyWinApp/MyWinApp.csproj
+++ b/MyWinApp/MyWinApp/MyWinApp.csproj
@@ -81,8 +81,16 @@
     <Compile Include="ListForm.Designer.cs">
       <DependentUpon>ListForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Models\District.cs" />
+    <Compile Include="Models\Student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StudentUi.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StudentUi.Designer.cs">
+      <DependentUpon>StudentUi.cs</DependentUpon>
+    </Compile>
     <Compile Include="ValidationForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -115,9 +123,14 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StudentUi.resx">
+      <DependentUpon>StudentUi.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ValidationForm.resx">
       <DependentUpon>ValidationForm.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="Properties\DataSources\MyWinApp.Models.District.datasource" />
+    <None Include="Properties\DataSources\MyWinApp.Models.Student.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
